--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@ config/app_config_local.yml
 .ruby-version
 .rvmrc
 .elasticbeanstalk/
+Gemfile.lock
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
