--- a/config/database.yml
+++ b/config/database.yml
@@ -18,11 +18,20 @@ test:
   pool: 5
   timeout: 5000
 
+# production:
+#   adapter: mysql2
+#   encoding: utf8
+#   database: <%= ENV['RDS_DB_NAME'] %>
+#   username: <%= ENV['RDS_USERNAME'] %>
+#   password: <%= ENV['RDS_PASSWORD'] %>
+#   host: <%= ENV['RDS_HOSTNAME'] %>
+#   port: <%= ENV['RDS_PORT'] %>
+
 production:
   adapter: mysql2
   encoding: utf8
-  database: <%= ENV['RDS_DB_NAME'] %>
-  username: <%= ENV['RDS_USERNAME'] %>
-  password: <%= ENV['RDS_PASSWORD'] %>
-  host: <%= ENV['RDS_HOSTNAME'] %>
-  port: <%= ENV['RDS_PORT'] %>
+  database: loadtest
+  username: admin
+  password: Statorama1
+  host: ncal-mysql-loadtest.czebeq6fsif6.us-west-1.rds.amazonaws.com
+  port: 3306
