--- a/config/database.yml
+++ b/config/database.yml
@@ -35,11 +35,20 @@ test:
 #   host: <%= ENV['RDS_HOSTNAME'] %>
 #   port: <%= ENV['RDS_PORT'] %>
 
+# production:
+#   adapter: mysql2
+#   encoding: utf8
+#   database: loadtest
+#   username: admin
+#   password: Statorama1
+#   host: ncal-mysql-loadtest.czebeq6fsif6.us-west-1.rds.amazonaws.com
+#   port: 3306
+
 production:
   adapter: mysql2
   encoding: utf8
-  database: loadtest
+  database: tbm1-4
   username: admin
   password: Statorama1
-  host: ncal-mysql-loadtest.czebeq6fsif6.us-west-1.rds.amazonaws.com
+  host: tbm1-4.czebeq6fsif6.us-west-1.rds.amazonaws.com
   port: 3306
