--- a/config/database.yml
+++ b/config/database.yml
@@ -47,7 +47,7 @@ test:
 production:
   adapter: mysql2
   encoding: utf8
-  database: tbm1-4
+  database: tbm1_4
   username: admin
   password: Statorama1
   host: tbm1-4.czebeq6fsif6.us-west-1.rds.amazonaws.com
