--- a/config/database.yml
+++ b/config/database.yml
@@ -47,8 +47,8 @@ test:
 production:
   adapter: mysql2
   encoding: utf8
-  database: foo
+  database: zazo_dev_1_4
   username: admin
   password: Statorama1
-  host: tbm1-4.czebeq6fsif6.us-west-1.rds.amazonaws.com
+  host: zazo-dev.czebeq6fsif6.us-west-1.rds.amazonaws.com
   port: 3306
