Add andrey to dispatch

--- a/config/notifications.yml
+++ b/config/notifications.yml
@@ -1,10 +1,11 @@
 email:
   from: elfishawy.sani@gmail.com
-  to: sani
+  to: sani, andrey
   subject_prefix: ZAZO
   subject_line_length: 50
   addresses:
     sani: elfishawy.sani@gmail.com
+    andrey: aboyko@codeminders.com
 sms:
   from: elfishawy.sani@gmail.com
   subject_prefix: ZAZO
