Attempt to fix paperclip problem deploying ot EB

--- a/config/app_config.yml
+++ b/config/app_config.yml
@@ -12,6 +12,7 @@ defaults: &settings
   twilio_ssid: "ACe5e5ec0578491107044c959f906b3f09"
   twilio_token: "f5c4ef94c00d76960d27eb28ed03a8c1"
   app_schema: "zazo://"
+  use_s3: false
 
 
 development: 
