Landing page working well

--- a/config/app_config.yml
+++ b/config/app_config.yml
@@ -1,7 +1,7 @@
 defaults: &settings
   site_url: http://localhost:3000
-  android_store_link: market://details?id=com.noplanbees.threebyme
-  iphone_store_link: https://itunes.apple.com/us/app/threebyme/id585542753?mt=8
+  android_store_url: market://details?id=com.noplanbees.threebyme
+  iphone_store_url: https://itunes.apple.com/us/app/threebyme/id585542753?mt=8
   domain_name: zazoapp.com
   site_name: zazoapp
   app_name: "Zazo"
