--- a/test/fixtures/credentials.yml
+++ b/test/fixtures/credentials.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  type: 
+  cred_type: MyString
   cred: MyString
 
 two:
-  type: 
+  cred_type: MyString
   cred: MyString
