--- a/config/database.yml
+++ b/config/database.yml
@@ -1,61 +1,17 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-
-
-# development:
-#   adapter: sqlite3
-#   database: db/development.sqlite3
-#   pool: 5
-#   timeout: 5000
-development:
-  adapter: mysql2
-  database: tbm
-  username: root
-  password: stato
-  host: localhost
-  
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-# test:
-#   adapter: sqlite3
-#   database: db/test.sqlite3
-#   pool: 5
-#   timeout: 5000
-
-test:
-  adapter: mysql2
-  database: tbm_test
-  username: root
-  password: stato
-  host: localhost
-  
-# production:
-#   adapter: mysql2
-#   encoding: utf8
-#   database: <%= ENV['RDS_DB_NAME'] %>
-#   username: <%= ENV['RDS_USERNAME'] %>
-#   password: <%= ENV['RDS_PASSWORD'] %>
-#   host: <%= ENV['RDS_HOSTNAME'] %>
-#   port: <%= ENV['RDS_PORT'] %>
-
-# production:
-#   adapter: mysql2
-#   encoding: utf8
-#   database: loadtest
-#   username: admin
-#   password: Statorama1
-#   host: ncal-mysql-loadtest.czebeq6fsif6.us-west-1.rds.amazonaws.com
-#   port: 3306
-
-production:
+default: &default
   adapter: mysql2
   encoding: utf8
-  database: zazo_dev_1_4
-  username: admin
-  password: Statorama1
-  host: zazo-dev.czebeq6fsif6.us-west-1.rds.amazonaws.com
-  port: 3306
+  database: <%= Figaro.env.db_name %>
+  username: <%= Figaro.env.db_username %>
+  password: <%= Figaro.env.db_password %>
+  host: <%= Figaro.env.db_hostname %>
+  port: <%= Figaro.env.db_port.to_i %>
+
+development:
+  <<: *default
+
+test:
+  <<: *default
+
+production:
+  <<: *default
