Status controller added

--- a/config/app_config.yml
+++ b/config/app_config.yml
@@ -1,4 +1,5 @@
 defaults: &settings
+  version: '2.0.0'
   android_store_url: market://details?id=com.noplanbees.threebyme
   iphone_store_url: https://itunes.apple.com/us/app/threebyme/id585542753?mt=8
   domain_name: zazoapp.com
