Landing page changed to use senders mkey

--- a/config/notifications.yml
+++ b/config/notifications.yml
@@ -1,12 +1,12 @@
 email:
   from: elfishawy.sani@gmail.com
-  to: sani, andrey
+  to: sani, serhii, alex
   subject_prefix: ZAZO
   subject_line_length: 50
   addresses:
     sani: elfishawy.sani@gmail.com
-    andrey: aboyko@codeminders.com
     serhii: skamenkovych@codeminders.com
+    alex: a.ulyanitsky@gmail.com
 sms:
   from: elfishawy.sani@gmail.com
   subject_prefix: ZAZO
