--- a/config/app_config.yml
+++ b/config/app_config.yml
@@ -4,7 +4,7 @@ defaults: &settings
   iphone_store_url: http://itunes.com/apps/zazo
   domain_name: zazoapp.com
   site_name: zazoapp
-  app_name: zazo
+  app_name: Zazo
   admin_email: admin@zazoapp.com
   support_email: support@zazoapp.com
   app_schema: "zazo://"
