Moved helpers to LandingHelper.

--- a/config/app_config.yml
+++ b/config/app_config.yml
@@ -1,8 +1,7 @@
 defaults: &settings
   version: '2.0.0'
   android_store_url: https://play.google.com/store/apps/details?id=com.zazoapp.client
-  # iphone_store_url: http://itunes.com/apps/zazo
-  iphone_store_url: "/ios"
+  iphone_store_url: http://itunes.com/apps/zazo
   domain_name: zazoapp.com
   site_name: zazoapp
   app_name: Zazo
