Use collation: utf8_general_ci

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,7 @@
 default: &default
   adapter: mysql2
   encoding: utf8
+  collation: utf8_general_ci
   database: <%= Figaro.env.db_name %>
   username: <%= Figaro.env.db_username %>
   password: <%= Figaro.env.db_password %>
