--- a/config/Gemfile
+++ b/config/Gemfile
@@ -84,6 +84,7 @@ group :development do
   gem 'guard-rspec'
   gem 'guard-rubocop'
   gem 'guard-pow', require: false
+  gem 'terminal-notifier-guard'
   gem 'quiet_assets'
   gem 'rb-fchange', require: false
   gem 'rb-fsevent', require: false
