--- a/config/Gemfile
+++ b/config/Gemfile
@@ -75,7 +75,7 @@ gem 'slim-rails'
 
 gem 'bootstrap-sass'
 gem 'simple_form'
-gem 'airbrake'
+gem 'rollbar'
 
 group :development do
   gem 'better_errors'
