--- a/config/Gemfile
+++ b/config/Gemfile
@@ -31,7 +31,7 @@ gem 'turbolinks'
 gem 'aws-sdk', '< 2.0'
 
 # Used in notifications
-gem 'httparty'
+gem 'faraday_middleware'
 
 # gem 'npb_logging', github: 'etcetc/npb_logging'
 gem 'console_candy', github: 'etcetc/console_candy'
