--- a/config/Gemfile
+++ b/config/Gemfile
@@ -91,6 +91,7 @@ group :development do
   gem 'rb-fsevent', require: false
   gem 'rb-inotify', require: false
   gem 'rails_layout'
+  gem 'rsense'
 end
 
 # Testing
