--- a/config/Gemfile
+++ b/config/Gemfile
@@ -76,6 +76,7 @@ gem 'slim-rails'
 gem 'bootstrap-sass'
 gem 'simple_form'
 gem 'rollbar'
+gem 'settingslogic'
 
 group :development do
   gem 'better_errors'
