Revert "Fixing CI build"
This reverts commit ce207fd3f63ecc93c27d37e73326835b0aa4e923.

--- a/wercker.yml
+++ b/wercker.yml
@@ -10,8 +10,8 @@ services:
 build:
   steps:
     # Uncomment this to force RVM to use a specific Ruby version
-    - rvm-use:
-        version: 2.1.5
+    # - rvm-use:
+        # version: 2.1.5
 
     # A step that executes `bundle install` command
     - bundle-install
