--- a/config/Gemfile
+++ b/config/Gemfile
@@ -77,6 +77,7 @@ gem 'bootstrap-sass'
 gem 'simple_form'
 gem 'rollbar'
 gem 'settingslogic'
+gem 'newrelic_rpm'
 
 group :development do
   gem 'better_errors'
