--- a/wercker.yml
+++ b/wercker.yml
@@ -49,7 +49,7 @@ deploy:
     - akelmanson/rollbar-notify:
         access-token: $rollbar_access_token
     - rafaelverger/newrelic-deployment:
-        api_key: $newrelic_license_key
+        api_key: $newrelic_api_key
         app_name: $app_name ($WERCKER_DEPLOYTARGET_NAME)
     - wantedly/pretty-slack-notify:
         webhook_url: $slack_url
