--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -49,7 +49,7 @@ common: &default_settings
   # See https://newrelic.com/docs/site/renaming-applications for more details
   # on renaming your New Relic applications.
   #
-  app_name: <%= Settings.app_name %>
+  app_name: <%= Settings.app_name %> (<%= Rails.env %>)
 
   # When "true", the agent collects performance data about your
   # application and reports this data to the New Relic service at
@@ -192,7 +192,6 @@ development:
   <<: *default_settings
   # Turn on communication to New Relic service in development mode
   monitor_mode: false
-  app_name: <%= Settings.app_name %> (development)
 
   # Rails Only - when running in Developer Mode, the New Relic Agent will
   # present performance information on the last 100 transactions you have
@@ -221,9 +220,7 @@ production:
 staging:
   <<: *default_settings
   monitor_mode: true
-  app_name: <%= Settings.app_name %> (staging)
 
 playground:
   <<: *default_settings
   monitor_mode: true
-  app_name: <%= Settings.app_name %> (playground)
