--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -1,3 +1,7 @@
+AWS_REGION: us-west-1
+AWS_ACCESS_KEY_ID:
+AWS_SECRET_ACCESS_KEY:
+
 db_host:
 db_name:
 db_password:
@@ -32,6 +36,8 @@ ios_rollbar_access_token:
 android_rollbar_access_token:
 
 newrelic_license_key:
+
+sqs_queue_url:
 
 test:
   db_name: tbm_test
