Added 'reset database' step

--- a/wercker.yml
+++ b/wercker.yml
@@ -27,7 +27,9 @@ build:
           echo "ruby version $(ruby --version) running"
           echo "from location $(which ruby)"
           echo -p "gem list: $(gem list)"
-
+    - script:
+        name: reset database
+        code: bin/rake db:drop db:create db:migrate
     - script:
         name: create rspec and coverage dir
         code: mkdir -p $WERCKER_REPORT_ARTIFACTS_DIR/rspec $WERCKER_REPORT_ARTIFACTS_DIR/coverage
