--- a/wercker.yml
+++ b/wercker.yml
@@ -17,7 +17,8 @@ build:
     - bundle-install
 
     # A step that prepares the database.yml using the database in services
-    - rails-database-yml
+    - asux/rails-database-yml:
+      collation: utf8_unicode_ci
 
     # A custom script step, name value is used in the UI
     # and the code value contains the command that get executed
