--- a/wercker.yml
+++ b/wercker.yml
@@ -18,7 +18,7 @@ build:
 
     # A step that prepares the database.yml using the database in services
     - asux/rails-database-yml:
-        collation: utf8_unicode_ci
+        mysql-collation: utf8_unicode_ci
 
     # A custom script step, name value is used in the UI
     # and the code value contains the command that get executed
