--- a/config/app_config.yml
+++ b/config/app_config.yml
@@ -9,7 +9,7 @@ defaults: &settings
   support_email: support@zazoapp.com
   app_schema: zazo://
   use_s3: false
-  allow_authentication_with_token: false
+  authentication_method: digest
   verification_code_length: 4
   verification_code_lifetime_minutes: 120
   verification_code_sms_countries:
@@ -33,7 +33,7 @@ defaults: &settings
 
 development:
   <<: *settings
-  allow_authentication_with_token: true
+  authentication_method: basic
 
 test:
   <<: *settings
