--- a/config/Gemfile
+++ b/config/Gemfile
@@ -3,7 +3,7 @@ source 'https://rubygems.org'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 4.2.3'
 
-gem 'mysql2'
+gem 'mysql2', '~> 0.3.18'
 # gem 'multi_json', '1.7.8'
 
 # Use SCSS for stylesheets
@@ -114,7 +114,7 @@ group :test do
   gem 'faker'
   gem 'capybara'
   gem 'launchy'
-  gem 'shoulda-matchers'
+  gem 'shoulda-matchers', '~> 2.8'
   gem 'simplecov', require: false
   gem 'webmock'
   gem 'vcr'
