--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -38,6 +38,11 @@ client_rollbar_access_token:
 ios_rollbar_access_token:
 android_rollbar_access_token:
 
+papertrail_host:
+papertrail_port:
+papertrail_program:
+papertrail_local_hostname:
+
 newrelic_license_key:
 
 sqs_queue_url:
