--- a/config/Gemfile
+++ b/config/Gemfile
@@ -103,11 +103,10 @@ group :development do
   gem 'rsense'
 end
 
-# Testing
 group :development, :test do
   gem 'pry-rescue'
   gem 'pry-remote'
-  gem 'pry-byebug'
+  gem 'pry-byebug', '= 1.3.3'
   gem 'rspec-rails'
   gem 'factory_girl_rails'
 end
