--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -16,6 +16,8 @@ domain_name: localhost:3000
 gcm_api_key:
 gcm_uri: https://android.googleapis.com/gcm/send
 
+APN_CERTIFICATE_PASSPHRASE:
+
 http_basic_password:
 http_basic_username:
 
