--- a/config/Gemfile
+++ b/config/Gemfile
@@ -107,8 +107,10 @@ group :development, :test do
   gem 'pry-rescue'
   gem 'pry-remote'
   gem 'pry-byebug', '= 1.3.3'
+  gem 'jazz_fingers'
   gem 'rspec-rails'
   gem 'factory_girl_rails'
+  gem 'fuubar'
 end
 
 group :test do
