--- a/config/Gemfile
+++ b/config/Gemfile
@@ -89,11 +89,13 @@ gem 'rollbar'
 group :development do
   gem 'better_errors'
   gem 'binding_of_caller'
-  gem 'guard-bundler'
-  gem 'guard-rails'
-  gem 'guard-rspec'
-  gem 'guard-rubocop'
+  gem 'guard'
+  gem 'guard-bundler', require: false
   gem 'guard-pow', require: false
+  gem 'guard-rspec', require: false
+  gem 'guard-zeus'
+  gem 'guard-migrate'
+  gem 'guard-rubocop'
   gem 'terminal-notifier-guard'
   gem 'quiet_assets'
   gem 'rb-fchange', require: false
