--- a/config/Gemfile
+++ b/config/Gemfile
@@ -36,6 +36,7 @@ gem 'newrelic_rpm'
 gem 'kaminari'
 gem 'aasm'
 gem 'activerecord-colored_log_subscriber'
+gem 'active_interaction', '~> 3.0'
 
 gem 'remote_syslog_logger'
 gem 'rollbar'
