--- a/config/Gemfile
+++ b/config/Gemfile
@@ -57,7 +57,7 @@ group :development do
   gem 'rb-fsevent', require: false
   gem 'rb-inotify', require: false
   gem 'rails_layout'
-  gem 'rsense'
+  gem 'derailed_benchmarks'
 end
 
 group :development, :test do
