--- a/config/Gemfile
+++ b/config/Gemfile
@@ -36,8 +36,8 @@ gem 'newrelic_rpm'
 gem 'kaminari'
 gem 'aasm'
 gem 'activerecord-colored_log_subscriber'
-gem 'active_interaction', '~> 3.0'
 
+gem 'zazo-tools', github: 'noplanb/zazo-tools', tag: '0.3.0-wip.1'
 gem 'remote_syslog_logger'
 gem 'rollbar'
 
