Update usage of zazo-tools gem

--- a/config/Gemfile
+++ b/config/Gemfile
@@ -37,7 +37,8 @@ gem 'kaminari'
 gem 'aasm'
 gem 'activerecord-colored_log_subscriber'
 
-gem 'zazo-tools', github: 'noplanb/zazo-tools', tag: '0.3.0-wip.3'
+gem 'zazo-tools', github: 'noplanb/zazo-tools', tag: '0.3.0-wip.4', require: 'zazo'
+
 gem 'remote_syslog_logger'
 gem 'rollbar'
 
