--- a/config/Gemfile
+++ b/config/Gemfile
@@ -37,7 +37,7 @@ gem 'kaminari'
 gem 'aasm'
 gem 'activerecord-colored_log_subscriber'
 
-gem 'zazo-tools', github: 'noplanb/zazo-tools', tag: '0.3.0-wip.4', require: 'zazo'
+gem 'zazo-tools', github: 'noplanb/zazo-tools', tag: '1.0.0', require: 'zazo'
 
 gem 'remote_syslog_logger'
 gem 'rollbar'
