--- a/wercker.yml
+++ b/wercker.yml
@@ -1,27 +1,15 @@
 box: wercker/rvm
-# Build definition
-# See the Rails section on the wercker devcenter:
-# http://devcenter.wercker.com/articles/languages/ruby/settingup-rails4.html
-# You will want to define your database as follows:
+
 services:
   - wercker/mysql
-# See more about services on our devcenter:
-# http://devcenter.wercker.com/articles/services/
+
 build:
   steps:
-    # Uncomment this to force RVM to use a specific Ruby version
-    # - rvm-use:
-        # version: 2.1.5
-
-    # A step that executes `bundle install` command
-    - bundle-install
-
-    # A step that prepares the database.yml using the database in services
+    - bundle-install:
+        gemfile: config/Gemfile
+        without: development production
     - asux/rails-database-yml:
         mysql-collation: utf8_unicode_ci
-
-    # A custom script step, name value is used in the UI
-    # and the code value contains the command that get executed
     - script:
         name: echo ruby information
         code: |
@@ -40,6 +28,7 @@ build:
   after-steps:
     - wantedly/pretty-slack-notify:
         webhook_url: $slack_url
+
 deploy:
   steps:
     - asux/elastic-beanstalk-deploy:
