--- a/wercker.yml
+++ b/wercker.yml
@@ -23,8 +23,10 @@ build:
         name: rspec
         code: rspec
   after-steps:
-    - wantedly/pretty-slack-notify:
-        webhook_url: $slack_url
+    - slack-notifier:
+        url: $SLACK_URL
+        channel: devops
+        username: Wercker
 
 deploy:
   steps:
@@ -41,4 +43,4 @@ deploy:
         api_key: $newrelic_api_key
         app_name: $app_name ($WERCKER_DEPLOYTARGET_NAME)
     - wantedly/pretty-slack-notify:
-        webhook_url: $slack_url
+        webhook_url: $SLACK_URL
