--- a/wercker.yml
+++ b/wercker.yml
@@ -23,24 +23,30 @@ build:
         name: rspec
         code: rspec
   after-steps:
+    - asux/pretty-slack-notify:
+        webhook_url: $SLACK_URL
+        channel: devops
+
+deploy:
+  box: zazo/awseb-wercker-deploy
+  steps:
+    - script:
+        name: set up ssh key
+        code: /opt/setup/github_ssh_key.sh
+    - script:
+        name: clone project
+        code: /opt/action/clone_repo.sh
+    - script:
+        name: setup aws and eb config
+        code: /opt/setup/aws_eb_conf.sh
+    - script:
+        name: check eb status
+        code: /opt/action/eb_status.sh
+    - script:
+        name: deploy to eb
+        code: /opt/action/eb_deploy.sh
+  after-steps:
     - slack-notifier:
         url: $SLACK_URL
         channel: devops
         username: Wercker
-
-deploy:
-  steps:
-    - asux/elastic-beanstalk-deploy:
-        key: $AWS_ACCESS_KEY_ID
-        secret: $AWS_SECRET_ACCESS_KEY
-        app_name: $EB_APP
-        env_name: $EB_ENV
-        region: $AWS_REGION
-  after-steps:
-    - akelmanson/rollbar-notify:
-        access-token: $rollbar_access_token
-    - rafaelverger/newrelic-deployment:
-        api_key: $newrelic_api_key
-        app_name: $app_name ($WERCKER_DEPLOYTARGET_NAME)
-    - wantedly/pretty-slack-notify:
-        webhook_url: $SLACK_URL
