--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -33,6 +33,10 @@ twilio_ssid:
 twilio_to_number: '+16502453537'
 twilio_token:
 
+nuance_asr_api_key:
+nuance_asr_api_id:
+nuance_asr_id:
+
 rollbar_access_token:
 client_rollbar_access_token:
 
