--- a/config/Gemfile
+++ b/config/Gemfile
@@ -28,6 +28,7 @@ gem 'streamio-ffmpeg'
 gem 'settingslogic'
 gem 'figaro', github: 'asux/figaro', branch: 'feature/eb-set-command'
 gem 'sidekiq'
+gem 'sinatra', require: false
 
 gem 'zazo-tools', github: 'noplanb/zazo-tools', tag: '1.0.0', require: 'zazo'
 gem 'rollbar'
