Add emojis support for text messages

--- a/config/Gemfile
+++ b/config/Gemfile
@@ -17,6 +17,7 @@ gem 'aasm'
 gem 'console_candy', github: 'etcetc/console_candy'
 gem 'npb_notification', github: 'etcetc/npb_notification'
 gem 'enum_handler', github: 'asux/enum_handler'
+gem 'emojimmy'
 
 gem 'aws-sdk', '~> 2'
 gem 'gcm'
